<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fti.umby.projectuas.UasActivity" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#CCCC"
        android:text="@string/header"
        android:textSize="30sp" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:background="#37FFFF"
        android:gravity="center_horizontal"
        android:text="@string/menu1"
        android:textSize="20sp" />

     <TextView
         android:id="@+id/textView3"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true"
         android:background="#37FFFF"
         android:gravity="center_horizontal"
         android:text="@string/menu2"
         android:textSize="20sp" />
     
     <TextView
         android:id="@+id/textView4"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView3"
         android:layout_centerHorizontal="true"
         android:background="#37FFFF"
         android:gravity="center_horizontal"
         android:text="@string/Menu3"
         android:textSize="20sp" />
    
    
     <TextView
        android:id="@+id/textView5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:background="#CCCC"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:text="@string/author" />
</RelativeLayout>
